--- a/src/components/DoctorRow/DoctorRow.css
+++ b/src/components/DoctorRow/DoctorRow.css
@@ -1,7 +1,22 @@
 tr.available td {
-    color: #00a104;
+    color: #d82a0b;
 }
 
 tr.unavailable td {
+    color: #00a104;
+}
+
+button.button-outline.available {
     color: #d82a0b;
+    border-color: #d82a0b;
+}
+
+button.button-outline.unavailable {
+    color: #00a104;
+    border-color: #00a104;
+}
+button.button.button-outline:focus,
+button.button.button-outline:hover {
+    color: #9b4dca;
+    border-color: #9b4dca;
 }
